k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: devsecops

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine

          ports:
            - containerPort: 5432

          securityContext:
            runAsNonRoot: true
            runAsUser: 999
            allowPrivilegeEscalation: false

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            tcpSocket:
              port: 5432
            initialDelaySeconds: 10
            periodSeconds: 10

          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
